# src/controllers/routes/http.routes.ts
@@ -36,7 +36,8 @@ import {
   deleteCommunityPostHandler,
   likeCommunityPostHandler,
   unlikeCommunityPostHandler,
-  searchCommunitiesHandler
+  searchCommunitiesHandler,
+  checkCommunityMemberHandler
 } from '../handlers/http'
 import { wellKnownComponents } from '@dcl/platform-crypto-middleware'
 import { multipartParserWrapper } from '@well-known-components/multipart-wrapper'
@@ -82,6 +83,7 @@ export async function setupHttpRoutes(context: GlobalContext): Promise<Router<Gl
   router.get('/v1/communities/:id', signedFetchMiddleware({ optional: true }), getCommunityHandler)
   router.get('/v1/communities', signedFetchMiddleware({ optional: true }), getCommunitiesHandler)
   router.get('/v1/communities/:id/members', signedFetchMiddleware({ optional: true }), getCommunityMembersHandler)
+  router.get('/v1/communities/:id/members/:memberAddress', signedFetchMiddleware(), checkCommunityMemberHandler)
 
   router.post('/v1/communities/:id/members', signedFetchMiddleware(), addMemberToCommunityHandler)
   router.delete('/v1/communities/:id/members/:memberAddress', signedFetchMiddleware(), removeMemberFromCommunityHandler)
